# moesif-envoy-wasm-plugin

./: .gitignore  Cargo-build.dockerfile  README.md  echo-virtualservice.yaml  echo.yaml  gloo-loadbalancer.yaml  istio-echo-gateway-vservice.yaml  istio-envoy-filter.yaml  istio-moesif-upstream.yaml  local-setup.sh  logs.sh  restart.sh  runtime-config.json
examples/envoy/: docker-compose.yaml  envoy.yaml
examples/istio/: artifact.dockerfile  helm_install_istio.sh  istio-echo-gateway-vservice.yaml  istio-echo-inbound.yaml  istio-envoy-filter.yaml  istio-moesif-outbound.yaml  istio-moesif-upstream.yaml  k8s_apply.sh  k8s_setup.sh  logs.sh  moesif-wasm-plugin.yaml  publish_docker.sh  publish_internal.sh  publish_wasmhub.sh  restart.sh
moesif-gloo-wasm/: .bazelrc  .gitignore  Cargo-build.dockerfile  Cargo.toml  docker-compose.yaml  envoy.yaml  filter.rs  gateway-proxy.yaml
moesif-gloo-wasm/src/: config.rs  http_context.rs  lib.rs  root_context.rs  rules.rs
moesif-wasm/: Cargo-build.dockerfile  Cargo.toml
moesif-wasm/src/: config.rs  event.rs  http_callback.rs  http_context.rs  lib.rs  root_context.rs  update_manager.rs
