[package]
name = "gloomoesif"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "gloomoesif"
path = "filter.rs"

[dependencies]
proxy-wasm = { version = "0.2.1", package = "proxy-wasm" }
log = { version = "0.4.17", package = "log" }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
