[package]
name = "moesif_envoy_wasm_plugin"
version = "0.3.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = { version = "0.2.1", package = "proxy-wasm" }
log = { version = "0.4.17", package = "log" }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
base64 = "0.21.2"
uuid = { version = "0.8.2", features = ["v4"] }
regex = "1.5.4"